syntax = "proto3";
package Greeter;

option csharp_namespace = "GrpcStreamingDemo.Proto.Greeter";

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply);
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}